--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -61,8 +61,11 @@
   color: #ffffff;
   cursor: pointer;
   padding: 10px 40px;
-  min-height: 35px;
+  margin-left: 10px;
+  min-height: 40px;
   border: solid 2px transparent;
+  border-radius: 5px;
+
   border-left: 1px solid rgb(173, 171, 171);
   background-color: rgb(133, 212, 68);
   transition: background-color 1000ms, box-shadow 500ms ease;
